<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_title"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="26dp"
            android:text="@string/form_photo"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/form_butChange"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:columnCount="2">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/form_name"/>

        <EditText
            android:id="@+id/form_etName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:paddingTop="15dp"
            android:text="@string/form_lastName"/>

        <EditText
            android:id="@+id/form_etLastName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:paddingTop="15dp"
            android:text="@string/form_addres"/>

        <EditText
            android:id="@+id/form_etAddress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:paddingTop="15dp"
            android:text="@string/form_age"/>

        <EditText
            android:id="@+id/form_etAge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:paddingTop="15dp"
            android:text="@string/form_phone"/>

        <EditText
            android:id="@+id/form_etPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:text="@string/form_submit"
        android:onClick="Button_SaveInfo"/>

</LinearLayout>