<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="Correo"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/login_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:textColor="@color/cardview_shadow_start_color"
        android:hint="@string/hint_email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="Contraseña"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/cardview_shadow_start_color"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/bt_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:layout_marginTop="30dp"
        android:onClick="Button_Login"/>

    <Button
        android:id="@+id/bt_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:onClick="Button_New_User"
        android:layout_marginTop="10dp"/>

</LinearLayout>